...
                        painter = painterResource(android.R.drawable.ic_menu_edit),
                        contentDescription = stringResource(R.string.edit_title)
                    )
                }
                Box {
                    IconButton(onClick = { menuExpanded = true }) {
                        Text("...", color = Color.White, style = MaterialTheme.typography.titleLarge)
                    }
                    DropdownMenu(
                        expanded = menuExpanded,
                        onDismissRequest = { menuExpanded = false }
                    ) {
                        DropdownMenuItem(
...
